--- a/app/src/main/res/layout/fragment_skill_iq.xml
+++ b/app/src/main/res/layout/fragment_skill_iq.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/skill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="240dp"
-        android:src="@drawable/skill"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/skill_iq"
+        android:layout_width="411dp"
+        android:layout_height="617dp"
+        android:layout_marginTop="55dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/skill_iq_item" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
