--- a/app/src/main/res/layout/learning_leaders_item.xml
+++ b/app/src/main/res/layout/learning_leaders_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -24,11 +23,11 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="200dp"
                 android:layout_marginRight="200dp"
-                android:text="TextView"
+                android:text="Hours"
                 android:textSize="16sp"
                 app:fontFamily="sans-serif-light"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintBottom_toBottomOf="@id/learning_textView_2" />
 
             <TextView
                 android:id="@+id/learning_textView_1"
@@ -37,7 +36,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="180dp"
                 android:layout_marginRight="180dp"
-                android:text="TextView"
+                android:text="Name"
                 android:textSize="20sp"
                 app:fontFamily="sans-serif-black"
                 app:layout_constraintEnd_toEndOf="parent"
