--- a/app/src/main/res/layout/skill_iq_item.xml
+++ b/app/src/main/res/layout/skill_iq_item.xml
@@ -46,11 +46,11 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/skill_image"
-                android:layout_width="479dp"
+                android:layout_width="wrap_content"
                 android:layout_height="51dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="76dp"
-                android:layout_marginRight="76dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="120dp"
+                android:layout_marginRight="120dp"
                 android:src="@drawable/skill"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
