--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
         android:layout_marginTop="176dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/buttons"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -24,11 +24,11 @@
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="156dp"
-        android:layout_height="38dp"
+        android:layout_height="40dp"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
         android:layout_marginTop="168dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/buttons"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -40,7 +40,7 @@
         android:layout_width="0350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/buttons"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/buttons"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -69,6 +69,7 @@
         android:layout_marginTop="92dp"
         android:layout_marginEnd="148dp"
         android:layout_marginRight="148dp"
+        android:background="@drawable/buttons"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
