--- a/app/src/main/res/layout/fragment_learning_leaders.xml
+++ b/app/src/main/res/layout/fragment_learning_leaders.xml
@@ -14,6 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/learning_leaders_item" />
 
 
