--- a/app/src/main/res/layout/learning_leaders_item.xml
+++ b/app/src/main/res/layout/learning_leaders_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,7 +13,8 @@
         app:cardUseCompatPadding="true"
         app:contentPadding="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
+            android:id="@+id/constraint"
             android:layout_width="match_parent"
             android:layout_height="70dp">
 
@@ -20,40 +22,51 @@
                 android:id="@+id/learning_textView_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="200dp"
-                android:layout_marginRight="200dp"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="40dp"
                 android:text="Hours"
                 android:textSize="16sp"
                 app:fontFamily="sans-serif-light"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/learning_textView_2" />
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/learning_hours"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="41dp"
+                android:text="Learning hours,"/>
+
 
             <TextView
                 android:id="@+id/learning_textView_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="180dp"
-                android:layout_marginRight="180dp"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="10dp"
                 android:text="Name"
                 android:textSize="20sp"
-                app:fontFamily="sans-serif-black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:fontFamily="sans-serif-black" />
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="220dp"
+                android:layout_marginTop="41dp"
+
+                />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/learning_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:layout_marginEnd="192dp"
-                android:layout_marginRight="192dp"
-                android:src="@drawable/learner"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginLeft="-170dp"
+                android:layout_marginRight="128dp"
+                android:src="@drawable/learner" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 </FrameLayout>
