--- a/app/src/main/res/layout/skill_iq_item.xml
+++ b/app/src/main/res/layout/skill_iq_item.xml
@@ -13,49 +13,60 @@
         app:cardUseCompatPadding="true"
         app:contentPadding="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
+            android:id="@+id/relative2"
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="70dp">
 
             <TextView
                 android:id="@+id/skill_textView_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="164dp"
-                android:layout_marginRight="164dp"
-                android:text="TextView"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="40dp"
+                android:text="skill_score"
                 android:textSize="16sp"
                 app:fontFamily="sans-serif-light"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/skill_textView_1"
-                app:layout_constraintVertical_bias="0.461" />
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/skill_score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="41dp"
+                android:text="Skill IQ Score,"/>
+
 
             <TextView
                 android:id="@+id/skill_textView_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="144dp"
-                android:layout_marginRight="144dp"
-                android:text="TextView"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="10dp"
+                android:text="Name"
                 android:textSize="20sp"
-                app:fontFamily="sans-serif-black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:fontFamily="sans-serif-black" />
+
+            <TextView
+                android:id="@+id/country2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="220dp"
+                android:layout_marginTop="41dp"
+
+                />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/skill_image"
                 android:layout_width="wrap_content"
-                android:layout_height="51dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="120dp"
-                android:layout_marginRight="120dp"
-                android:src="@drawable/skill"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="-170dp"
+                android:layout_marginRight="128dp"
+                android:src="@drawable/skill" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 </FrameLayout>
