--- a/app/src/main/res/layout/activity_launching_.xml
+++ b/app/src/main/res/layout/activity_launching_.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Launching_Activity">
+    tools:context=".LaunchingActivity">
 
     <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/include"
         layout="@layout/toolbar" />
 
@@ -14,11 +16,11 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="0dp"
         android:background="#000000"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include"
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabTextColor="#fff" />
