--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -7,41 +7,72 @@
     android:background="#000000"
     tools:context=".SubmitActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/submit_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#000000"
+        app:titleTextColor="#ffffff"
+        app:titleMarginStart="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp"
+        android:elevation="4dp">
+
+        <RelativeLayout
+            android:id="@+id/relative_toolbar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/gads"
+                android:layout_width="500dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="-150dp"
+                android:src="@drawable/gads"
+                >
+
+            </androidx.appcompat.widget.AppCompatImageView>
+
+        </RelativeLayout>
+
+    </androidx.appcompat.widget.Toolbar>
+
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="155dp"
-        android:layout_height="29dp"
+        android:layout_height="50dp"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginTop="176dp"
+        android:layout_marginTop="168dp"
         android:background="@drawable/buttons"
         android:ems="10"
+        android:hint="First Name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="156dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="168dp"
         android:background="@drawable/buttons"
         android:ems="10"
+        android:hint="Last Name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="0350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="92dp"
         android:background="@drawable/buttons"
         android:ems="10"
+        android:hint="Email Address"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.459"
@@ -51,12 +82,12 @@
     <EditText
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="68dp"
         android:background="@drawable/buttons"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:inputType="textUri"
+        android:hint="Project on Github(link)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,11 +95,11 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginRight="104dp"
         android:background="@drawable/buttons"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
