--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,10 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#000000"
+        app:title="LEADERBOARD"
+        app:titleTextColor="#ffffff"
+        app:titleMarginStart="50dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
-        android:elevation="4dp"
-        />
+        android:elevation="4dp">
+
+        <RelativeLayout
+            android:id="@+id/relative_toolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginLeft="70dp">
+
+            <Button
+                android:id="@+id/submit_button"
+                android:layout_width="100dp"
+                android:layout_height="20dp"
+                android:background="@drawable/buttons2"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="0dp"
+                android:text="Submit"
+                android:textColor="#000000">
+
+            </Button>
+
+        </RelativeLayout>
+
+
+
+    </androidx.appcompat.widget.Toolbar>
 
 
 
