--- a/app/src/main/res/layout/fragment_skill_iq.xml
+++ b/app/src/main/res/layout/fragment_skill_iq.xml
@@ -13,6 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/skill_iq_item" />
 
 
