--- a/app/src/main/res/layout/skill_iq_item.xml
+++ b/app/src/main/res/layout/skill_iq_item.xml
@@ -22,8 +22,10 @@
                 android:id="@+id/skill_textView_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
-                android:layout_marginTop="40dp"
+                android:layout_below="@+id/skill_textView_1"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="2.5dp"
+
                 android:text="skill_score"
                 android:textSize="16sp"
                 app:fontFamily="sans-serif-light"
@@ -33,7 +35,7 @@
                 android:id="@+id/skill_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="230dp"
                 android:layout_marginTop="41dp"
                 android:text="Skill IQ Score,"/>
 
@@ -42,7 +44,7 @@
                 android:id="@+id/skill_textView_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
+                android:layout_marginLeft="150dp"
                 android:layout_marginTop="10dp"
                 android:text="Name"
                 android:textSize="20sp"
@@ -52,7 +54,8 @@
                 android:id="@+id/country2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="220dp"
+                android:text="country"
+                android:layout_marginLeft="320dp"
                 android:layout_marginTop="41dp"
 
                 />
@@ -61,10 +64,12 @@
                 android:id="@+id/skill_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginLeft="-170dp"
-                android:layout_marginRight="128dp"
-                android:src="@drawable/skill" />
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="-150dp"
+                android:layout_marginEnd="250dp"
+                android:layout_marginRight="250dp"
+                 />
 
         </RelativeLayout>
 
