--- a/app/src/main/res/layout/skill_iq_item.xml
+++ b/app/src/main/res/layout/skill_iq_item.xml
@@ -18,6 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="70dp">
 
+            <ImageView
+                android:id="@+id/skill_image"
+                android:layout_width=""
+                android:layout_height=""
+                android:src="@drawable/skill">
+
+            </ImageView>
+
             <TextView
                 android:id="@+id/skill_textView_2"
                 android:layout_width="wrap_content"
@@ -59,17 +67,6 @@
                 android:layout_marginTop="41dp"
 
                 />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/skill_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="-150dp"
-                android:layout_marginEnd="250dp"
-                android:layout_marginRight="250dp"
-                 />
 
         </RelativeLayout>
 
