--- a/app/src/main/res/layout/successful_not_dialog_box.xml
+++ b/app/src/main/res/layout/successful_not_dialog_box.xml
@@ -3,16 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="370dp"
+    android:layout_height="250dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/not_successful_cardview"
         android:layout_width="370dp"
         android:layout_height="250dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:elevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +20,7 @@
 
         <RelativeLayout
             android:layout_width="370dp"
-            android:layout_height="370dp">
+            android:layout_height="250dp">
 
 
             <androidx.appcompat.widget.AppCompatImageView
