--- a/app/src/main/res/layout/skill_iq_item.xml
+++ b/app/src/main/res/layout/skill_iq_item.xml
@@ -20,8 +20,8 @@
 
             <ImageView
                 android:id="@+id/skill_image"
-                android:layout_width=""
-                android:layout_height=""
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/skill">
 
             </ImageView>
