--- a/app/src/main/res/layout/skill_iq_item.xml
+++ b/app/src/main/res/layout/skill_iq_item.xml
@@ -20,8 +20,9 @@
 
             <ImageView
                 android:id="@+id/skill_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="020dp"
                 android:src="@drawable/skill">
 
             </ImageView>
@@ -33,11 +34,10 @@
                 android:layout_below="@+id/skill_textView_1"
                 android:layout_marginLeft="150dp"
                 android:layout_marginTop="2.5dp"
-
                 android:text="skill_score"
                 android:textSize="16sp"
                 app:fontFamily="sans-serif-light"
-                app:layout_constraintVertical_bias="0.0" />
+                 />
 
             <TextView
                 android:id="@+id/skill_score"
